--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^16.2.0",
     "@types/three": "^0.155.1",
     "rxjs": "~7.8.0",
+    "stripe": "^13.3.0",
     "three": "^0.155.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
