--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/router": "^16.2.0",
     "@angular/service-worker": "^16.2.0",
     "@types/three": "^0.155.1",
+    "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
     "stripe": "^13.3.0",
-    "three": "^0.155.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -33,12 +33,12 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "^5.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "^5.2.2"
   }
 }
