--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rxjs": "~7.8.0",
     "stripe": "^13.3.0",
     "tslib": "^2.3.0",
+    "typescript": "^5.1.6",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -38,7 +39,6 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "^5.2.2"
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
