--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@angular/service-worker": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@types/three": "^0.155.1",
     "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
