--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@types/three": "^0.155.1",
     "bootstrap": "^5.3.1",
+    "cors": "^2.8.5",
     "rxjs": "~7.8.0",
     "stripe": "^13.5.0",
     "tslib": "^2.3.0",
