--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "rxjs": "~7.8.0",
     "stripe": "^13.5.0",
+    "three": "^0.156.1",
     "tslib": "^2.3.0",
     "typescript": "^5.1.6",
     "zone.js": "~0.13.0"
