update netlify.toml to get handling of https://domain.io/fucntions/serverlessfunction.js to show the content of the intended file

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
       origin = "*"
       methods = ["GET", "POST"]
 
-      [[redirects]]
-  from = '/api/*'
-  to = '/functions/:splat'
+[[redirects]]
+  from = "/functions/*"
+  to = "/functions/:splat"
   status = 200
