--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-september",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,32 +10,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.4",
-    "@angular/cdk": "^16.2.6",
-    "@angular/common": "^16.2.4",
-    "@angular/compiler": "^16.2.4",
-    "@angular/core": "^16.2.7",
-    "@angular/forms": "^16.2.4",
-    "@angular/platform-browser": "^16.2.4",
-    "@angular/platform-browser-dynamic": "^16.2.4",
-    "@angular/router": "^16.2.4",
-    "@angular/service-worker": "^16.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@angular/animations": "^17.0.0-next.6",
+    "@angular/cdk": "^17.0.0-next.5",
+    "@angular/common": "^17.0.0-next.6",
+    "@angular/compiler": "^17.0.0-next.6",
+    "@angular/core": "^17.0.0-next.6",
+    "@angular/forms": "^17.0.0-next.6",
+    "@angular/material": "^17.0.0-next.5",
+    "@angular/platform-browser": "^17.0.0-next.6",
+    "@angular/platform-browser-dynamic": "^17.0.0-next.6",
+    "@angular/router": "^17.0.0-next.6",
+    "@angular/service-worker": "^17.0.0-next.6",
     "@types/three": "^0.155.1",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "rxjs": "~7.8.0",
-    "stripe": "^13.5.0",
+    "stripe": "^13.7.0",
     "three": "^0.156.1",
     "tslib": "^2.3.0",
     "typescript": "^5.2.2",
-    "zone.js": "~0.13.0"
+    "uninstall": "^0.0.0",
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.4",
-    "@angular/cli": "~16.2.4",
-    "@angular/compiler-cli": "^16.2.4",
-    "@types/jasmine": "~4.3.0",
+    "@angular-devkit/build-angular": "^17.0.0-next.6",
+    "@angular/cli": "^17.0.0-next.6",
+    "@angular/compiler-cli": "^17.0.0-next.6",
+    "@types/jasmine": "^4.3.6",
     "jasmine-core": "^5.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
